Text overlap fix

--- a/wp-content/themes/makeblog/reviews/less/content/loop/reviews.less
+++ b/wp-content/themes/makeblog/reviews/less/content/loop/reviews.less
@@ -135,7 +135,8 @@
 		display: none;
 		line-height: 1em;
 		position: absolute;
-  	bottom: 25px;
+  	bottom: 27px;
+  	max-width: 49%;
 		span {
 			color: #777;
 		}
